(ocamllex lexer)
(menhir
  (flags --explain --fixed-exception)
  (modules parser))

(library
 (name talc)
 (modules talc util f k c h a tal x86 parser lexer)
 (inline_tests)
 (js_of_ocaml)
 (preprocess (pps ppx_inline_test ppx_expect)))

(test
 (name test)
 (modules Test)
 (modes byte exe)
 (libraries talc alcotest))

(executable
  (name js)
  (modules js)
  (libraries talc str js_of_ocaml zarith zarith_stubs_js)
  (modes byte)
  (preprocess (pps js_of_ocaml-ppx)))

(rule
  (mode (promote (into js)))
  (targets tal.js tal.d.ts)
  (deps (glob_files prim.js))
  (action
    (progn
      (run %{bin:js_of_ocaml}
           %{lib:zarith_stubs_js:biginteger.js}
           %{lib:zarith_stubs_js:runtime.js}
           prim.js
           %{dep:js.bc}
           -o tal.js)
      (with-outputs-to tal.d.ts
                       (bash "%{bin:dts_of_ocaml} $(find . -name '*Js.cmt')")))))
