(ocamllex lexer)
(menhir
  (flags --explain --fixed-exception)
  (modules parser))

(library
 (name ft)
 (modules ft language parser lexer typecheck)
 (libraries strictly-annotated))

(test
 (name test)
 (modules Test)
 (libraries ft alcotest str)
 (deps (glob_files examples/*.*))
 (action
   (progn
     (run %{test} -e)
     (no-infer (progn
                 (diff examples/page5.annot examples/page5.realannot))))))
