(ocamllex lexer)
(menhir
  (flags --explain --fixed-exception)
  (modules parser))

(library
 (name ft)
 (modules ft language parser lexer typecheck infer)
 (libraries strictly-annotated ocamlgraph)
 (inline_tests)
 (js_of_ocaml)
 (preprocess (pps ppx_inline_test ppx_expect)))

(test
 (name test)
 (modules Test)
 (modes byte exe)
 (libraries ft alcotest str)
 (deps (glob_files examples/*.*))
 (action
   (progn
     (run %{test} -e)
     (no-infer (progn
                 (diff examples/page5.annot examples/page5.realannot)
                 (diff examples/infer.annot examples/infer.realannot))))))

(executable
  (name js)
  (modules js)
  (libraries ft str js_of_ocaml)
  (modes byte)
  (preprocess (pps js_of_ocaml-ppx)))

(rule
  (mode (promote (into js)))
  (targets ft.js)
  (deps (glob_files prim.js))
  (action
    (run %{bin:js_of_ocaml} prim.js %{dep:js.bc} -o ft.js)))
