(ocamllex lexer)
(menhir
  (flags --explain --fixed-exception)
  (modules parser))

(library
 (name gtlc)
 (modules gtlc language typecheck cast_ir lift_ir typescript c
          eval parser lexer util builtin)
 (libraries str)
 (inline_tests)
 (js_of_ocaml)
 (preprocess (pps ppx_inline_test ppx_expect)))

(test
 (name test)
 (modules Test)
 (modes byte exe)
 (libraries gtlc alcotest))

(executable
  (name js)
  (modules js)
  (libraries gtlc)
  (modes byte)
  (preprocess (pps js_of_ocaml-ppx)))

(rule
  (mode (promote (into js)))
  (targets gtlc.js)
  (deps (glob_files prim.js))
  (action
    (run %{bin:js_of_ocaml}
         prim.js
         %{dep:js.bc}
         -o gtlc.js)))
