(ocamllex lexer)
(menhir
  (flags --explain --fixed-exception)
  (modules parser))

(library
 (name gtlc)
 (modules gtlc language typecheck cast_ir lift_ir typescript c
          eval parser lexer util builtin forest infer service)
 (libraries camomile str)
 (inline_tests)
 (js_of_ocaml)
 (preprocess (pps ppx_inline_test ppx_expect)))

(test
 (name test)
 (modules Test)
 (modes byte exe)
 (libraries gtlc alcotest))

(executable
  (name js)
  (modules js)
  (libraries gtlc)
  (modes byte)
  (preprocess (pps js_of_ocaml-ppx)))

(rule
  (mode (promote (into js)))
  (targets gtlc.js gtlc.d.ts)
  (deps (glob_files prim.js))
  (action
    (progn
      (run %{bin:js_of_ocaml}
           prim.js
           %{dep:js.bc}
           -o gtlc.js)
      (with-outputs-to gtlc.d.ts
                       (bash "%{bin:dts_of_ocaml} $(find . -name '*Js.cmt')")))))
