(ocamllex lexer)
(menhir
  (flags --explain --fixed-exception)
  (modules parser))

(library
 (name syntax)
 (modules syntax ast parser lexer load)
 (inline_tests)
 (preprocess (pps ppx_inline_test ppx_expect)))

(library
 (name classical)
 (modules norm sat resolve proof)
 (libraries syntax)
 (inline_tests)
 (preprocess (pps ppx_inline_test ppx_expect)))
