(menhir
  (flags --explain --fixed-exception --no-dollars)
  (modules parser))

(library
 (name sema_sub)
 (modules lib
          syntax lexer parser syntax_help util
          type subtype
          )
 (libraries str sedlex menhirLib qcheck ppxlib)
 (inline_tests)
 (js_of_ocaml)
 (preprocess (pps sedlex.ppx ppx_inline_test ppx_expect)))

(test
  (name subtype_test)
  (modules Subtype_test)
  (libraries sema_sub alcotest qcheck-alcotest))

(executable
  (name cli)
  (modules cli
           repl)
  (libraries sema_sub lwt lambda-term react))

(executable
  (name js)
  (modules js)
  (libraries sema_sub)
  (modes byte)
  (preprocess (pps js_of_ocaml-ppx)))

(rule
  (mode (promote (into js)))
  (targets sema_sub.js sema_sub.d.ts)
  (deps (glob_files prim.js))
  (action
    (progn
      (run %{bin:js_of_ocaml}
           prim.js
           %{dep:js.bc}
           -o sema_sub.js)
      (with-outputs-to sema_sub.d.ts
                       (bash "%{bin:dts_of_ocaml} $(find . -name '*Js.cmt')")))))
